--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -6,6 +6,7 @@ h1 タスク一覧
 table.table.table-striped
   thead.thead-default
     tr
+      th
       th= Task.human_attribute_name(:name)
       th= Task.human_attribute_name(:deadline)
       th= Task.human_attribute_name(:priority)
@@ -14,6 +15,7 @@ table.table.table-striped
   tbody
     -@tasks.each do |task|
       tr
+        th= link_to '編集', edit_task_path(task), class:'btn btn-primary mr-3'
         td= link_to task.name, task_path(task)
         td=  task.deadline
         td=  task.priority
