--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -11,6 +11,7 @@ table.table.table-striped
       th= Task.human_attribute_name(:deadline)
       th= Task.human_attribute_name(:priority)
       th= Task.human_attribute_name(:status)
+      th
 
   tbody
     -@tasks.each do |task|
@@ -20,3 +21,4 @@ table.table.table-striped
         td=  task.deadline
         td=  task.priority
         td=  task.status
+        td= link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除してよろしいですか？" }, class: 'btn btn-danger'
