--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -14,7 +14,7 @@
         = f.text_area :description, rows: 5, class: 'form-control', id: 'task_description'
       .form-group
           = f.label :priority
-          = f.select :priority,{"高": 1,"中": 2,"低": 3}, id: 'task_priority'
+          = f.collection_select :priority, Priority.all, :id, :value
       .form-group
           = f.label :deadline
           = f.date_select :deadline, id: 'task_deadline'
