--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -18,7 +18,7 @@ table.table.table-striped
       tr
         th= link_to '編集', edit_task_path(task), class:'btn btn-primary mr-3'
         td= link_to task.name, task_path(task)
-        td=  task.deadline
-        / td=  task.priority.value
-        td=  task.status
+        td= task.deadline
+        td= task.priority.value
+        td= task.status
         td= link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除してよろしいですか？" }, class: 'btn btn-danger'
