--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -14,7 +14,7 @@
         = f.text_area :description, rows: 5, class: 'form-control', id: 'task_description'
       .form-group
           = f.label :priority
-          = f.collection_select :priority_id, Priority.all, :id, :value
+          = f.collection_select :priority_id,  @priorities, :id, :value
       .form-group
           = f.label :deadline
           = f.date_select :deadline, id: 'task_deadline'
