--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -6,6 +6,7 @@ h1 タスクの編集
 .container
   = form_with model: @task, local: true do |f|
     .form-group
+
       = f.label :name
       = f.text_field :name, class: 'form-control', id: 'task_name'
     .form-group
@@ -17,5 +18,8 @@ h1 タスクの編集
     .form-group
       = f.label :deadline
       = f.date_select :deadline, id: 'task_deadline'
+    .form-group
+      = f.label :status
+      = f.collection_select :status, @statuses, :id, :name
 
     = f.submit "更新", class: 'btn btn-primary'
