--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -5,6 +5,11 @@
    = link_to '一覧', tasks_path, class: 'nav-link'
 
   .container
+    -if @task.errors.present?
+        ul#error_explanation
+          - @task.errors.full_messages.each do |message|
+            li = message
+
     = form_with model: @task, local: true do |f|
       .form-group
         = f.label :name
