--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -17,5 +17,9 @@ h1 タスクの編集
     .form-group
       = f.label :deadline
       = f.date_select :deadline, id: 'task_deadline'
+    .form-group
+      = f.label :status
+      = f.collection_select :status, @statuses, :id, :name
+
 
     = f.submit "更新", class: 'btn btn-primary'
