--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,5 +1,13 @@
 h1 タスク一覧
 
+.mb-3
+  =form_with url: tasks_path, method: "get", local: true do |f|
+    .form-group
+      = f.label "名称"
+      = f.text_field :name, class: 'form-control'
+
+    = f.submit "検索", class: 'btn btn-outline-primary'
+
 =link_to "新規登録", new_task_path, class: "btn btn-primary"
 
 .mb-3
