--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,10 @@
 h1 タスク一覧
+.mb-3
+  =link_to "新規登録", new_task_path, class: "btn btn-primary"
 
-=link_to "新規登録", new_task_path, class: "btn btn-primary"
+.mb-3
+  = paginate @tasks
+  = page_entries_info @tasks
 
 .mb-3
 table.table.table-striped
