--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -20,5 +20,5 @@ table.table.table-striped
         td= link_to task.name, task_path(task)
         td= task.deadline
         td= task.priority.value
-        td= task.status_id.name
+        td= task.status_table.name
         td= link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除してよろしいですか？" }, class: 'btn btn-danger'
