--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -7,7 +7,7 @@ h1 タスク一覧
       = f.text_field :name, class: 'form-control'
     .form-group
       = f.label "ステータス"
-      = f.collection_select :status_id, @statuses, :id, :name, include_blank: '選択されていません', class: 'form-control'
+      = f.collection_select :status_table, @statuses, :id, :name, include_blank: '選択されていません', class: 'form-control'
 
     = f.submit "検索", class: 'btn btn-outline-primary'
 
