--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,17 @@ html
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-Highlight
       .navbar-brand TaskManagement
+
+      ul.navbar-nav.ml-auto
+        - if current_user
+          li.nav-item= current_user.name
+          li.nav-item= link_to 'タスク一覧', tasks_path, class: 'nav-link'
+          li.nav-item= link_to 'ログアウト', logout_path, method: :delete, class: 'nav-link'
+        -else
+          li.nav-item= link_to 'ログイン', login_path, class: 'nav-link'
     .container
       - if flash[:notice]
         .alert.alert-success= flash[:notice]
+      - if flash[:danger]
+        .alert.alert-danger= flash[:danger]
       == yield
