--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -11,6 +11,7 @@ table.table.table-striped
       th== Task.human_attribute_name(:deadline) + sort_desc("deadline") + sort_asc("deadline")
       th== Task.human_attribute_name(:priority) + sort_desc("priority_id") + sort_asc("priority_id")
       th= Task.human_attribute_name(:status)
+      th= Task.human_attribute_name(:label)
       th
 
   tbody
@@ -21,4 +22,7 @@ table.table.table-striped
         td= task.deadline
         td= task.priority.value
         td= task.status_table.name
+        td
+          - task.labels.each do |label|
+            = label.name
         td= link_to '削除', task_path(task), method: :delete, data: { confirm: "タスク「#{task.name}」を削除してよろしいですか？" }, class: 'btn btn-danger'
