--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -25,4 +25,7 @@ h1 タスクの編集
     .form-group
       = f.label :status
       = f.collection_select :status, @statuses, :id, :name
+      .form-group
+          = f.label :label
+          = f.collection_check_boxes(:label_ids, @labels, :id, :name)
     = f.submit "更新", class: 'btn btn-primary'
