--- a/app/views/tasks/new.html.slim
+++ b/app/views/tasks/new.html.slim
@@ -23,5 +23,7 @@
       .form-group
           = f.label :deadline
           = f.date_select :deadline, id: 'task_deadline'
-
+      .form-group
+          = f.label :label
+          = f.collection_check_boxes(:label_ids, @labels, :id, :name)
       = f.submit "作成", class: 'btn btn-primary'
